tests/compile-fail/data_race/relax_acquire_race.stderr
warning: thread support is experimental and incomplete: weak memory effects are not emulated.

error: Undefined Behavior: Data race detected between Read on Thread(id = 3) and Write on Thread(id = 1) at alloc959 (current vector clock = VClock([27, 0, 0, 7]), conflicting timestamp = VClock([0, 6]))
  --> $DIR/relax_acquire_race.rs:40:17
   |
LL |                 *c.0 //~ ERROR Data race detected between Read on Thread(id = 3) and Write on Thread(id = 1)
   |                 ^^^^ Data race detected between Read on Thread(id = 3) and Write on Thread(id = 1) at alloc959 (current vector clock = VClock([27, 0, 0, 7]), conflicting timestamp = VClock([0, 6]))
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside closure at $DIR/relax_acquire_race.rs:40:17

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error; 1 warning emitted

